@@ -1,6 +1,6 @@
 // TortoiseSVN - a Windows shell extension for easy version control
 
-// Copyright (C) 2009-2010 - TortoiseSVN
+// Copyright (C) 2009-2010, 2012 - TortoiseSVN
 
 // This program is free software; you can redistribute it and/or
 // modify it under the terms of the GNU General Public License
@@ -90,7 +90,13 @@ void CRepositoryBrowserSelection::Add (const CItem* item)
     absPath.Replace (_T("\\"), _T("%5C"));
     path.url = CTSVNPath (absPath);
 
+    // we don't fully escape the urls, because the GetSVNApiPath() method
+    // of the CTSVNPath already does escaping.
+    // We only escape special chars here:
+    // the '%' because we know that this char isn't escaped yet, and
+    // the '"' char, because we pass these urls to the command line as well
     absPath.Replace (_T("%"), _T("%25"));
+    absPath.Replace (_T("\""), _T("%22"));
     path.urlEscaped = CTSVNPath (absPath);
 
     path.isExternal = item->is_external;
@@ -113,7 +119,13 @@ void CRepositoryBrowserSelection::Add (const CTreeItem* item)
     CString absPath = item->url;
     path.url = CTSVNPath (absPath);
 
+    // we don't fully escape the urls, because the GetSVNApiPath() method
+    // of the CTSVNPath already does escaping.
+    // We only escape special chars here:
+    // the '%' because we know that this char isn't escaped yet, and
+    // the '"' char, because we pass these urls to the command line as well
     absPath.Replace (_T("%"), _T("%25"));
+    absPath.Replace (_T("\""), _T("%22"));
     path.urlEscaped = CTSVNPath (absPath);
 
     path.isExternal = item->is_external;
